--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
-/node_modules
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
 
+# Dist folder
+dist/
+
+# Dependencies folder
+node_modules/
+
+# Temporary folders
+tmp/
+
+# MacOS files
 .DS_Store
-package-lock.json
+
+# dotenv environment variables file
+.env
+.env.test
+
+# Optional npm cache directory
+.npm
