--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,49 @@
 # Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Dist folder
-dist/
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# Dependencies folder
+# Coverage directory used by tools like istanbul
+coverage
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
 node_modules/
 
-# Temporary folders
-tmp/
+# Optional eslint cache
+.eslintcache
 
-# MacOS files
-.DS_Store
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+yarn.lock
 
 # dotenv environment variables file
 .env
 .env.test
 
-# Optional npm cache directory
-.npm
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+
+# rollup.js default build output
+dist/
+rollup.config.dev.js
+
+# Temporary folders
+tmp/
+temp/
+.DS_Store
